fixing travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,5 @@
+language: ruby
 cache: bundler
-after_script: %{ruby -e "Dir['config/*.rb'].each {|f| require \"./#{f}\" }; Dir['db/migrations/*.rb'].each { |f| require \"./#{f}\" }; CreatePosts.run" }
+script: rake test
 rvm:
   - 2.2.3
